test/fails/bad_functions/arguments3.lgl
int f(int x, int y) {
    return x + y;
}

void main() {
    print f(1);
    return;
}